--- a/JS/index.html
+++ b/JS/index.html
@@ -387,13 +387,13 @@ executable file 102 lines (86 sloc) 2.89 KB
             <a href="#">Yvonne</a>
           </li>
           <li class="collection-item">
-            <a href="#"></a>
+            <a href="#">Yaegar</a>
           </li>
           <li class="collection-item">
-            <a href="#"></a>
+            <a href="#">Yale</a>
           </li>
           <li class="collection-item">
-            <a href="#"></a>
+            <a href="#">Ya</a>
           </li>
         </ul>
       </div>
