--- a/SVG EXERCISES/index.html
+++ b/SVG EXERCISES/index.html
@@ -3,8 +3,25 @@
     <body>
         <h1>My first SVG exercises!</h1>
         
-        <svg>
-        
+        <svg width="100" height="100">
+            <circle cx="50" cy="50" r="40" stroke="red" stroke-width="4" fill="blue" />
+            Sorry, your browser does not support inline SVG.
+        </svg>
+        <svg width="400" height="110">
+            <rect width="300" height="100" style="fill:red;stroke-width:3;stroke:black" />
+            Sorry, your browser does not support inline SVG.
+        </svg>
+        <svg width="400" height="180">
+            <rect x="50" y="20" rx="20" ry="20" width="150" height="150" style="fill:green;stroke:black;stroke-width:5;opacity:0.5" />
+            Sorry, your browser does not support inline SVG.
+        </svg>
+        <svg height="210" width="500">
+            <line x1="0" y1="0" x2="200" y2="200" style="stroke:darkred;stroke-width:2" />
+            Sorry, your browser does not support inline SVG.
+        </svg>
+        <svg height="210" width="500">
+            <polygon points ="20,10 50,120 80,100" style="fill:blue;stroke:black;stroke-width:1" />
+            Sorry, your browser does not support inline SVG.
         </svg>
     </body>
 </html>
