--- a/Mobile App/index.html
+++ b/Mobile App/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=devive-width, initial-scale=1.0">
         <title>Mobile App</title>
-    </head>
+        <link type="text/css" rel="stylesheet" href="css/style.css">
+     </head>
     <body>
         <div id="container">
             <header id="head">
