--- a/Mobile App/index.html
+++ b/Mobile App/index.html
@@ -17,15 +17,16 @@
             </div>
             <nav id="nav">
                 <ul>
-                    <li>Home</li>
-                    <li>Products &amp; Services</li>
-                    <li>Favorites</li>
-                    <li>Contact</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Products &amp; Services</a></li>
+                    <li><a href="#">Favorites</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
+                <div class="keepOpen"></div>
             </nav>
             <footer id="foot">
                 
             </footer>
         </div>
     </body>
-</html>
+</html>s
