--- a/Mobile App/index.html
+++ b/Mobile App/index.html
@@ -4,7 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=devive-width, initial-scale=1.0">
         <title>Mobile App</title>
+        <!-- Web App Stylesheet -->
         <link type="text/css" rel="stylesheet" href="css/style.css">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Khand|Special+Elite" rel="stylesheet">
+        <!-- CDN for icon nav -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      </head>
     <body>
         <div id="container">
@@ -15,6 +20,15 @@
                 <h3>New Products</h3>
                 <img src="" alt="product#1" id="product">
             </div>
+            <!-- Icon nav bar -->
+            <div class="icon-bar">
+              <a class="active" href="#"><i class="fa fa-home"></i></a> 
+			  <a href="#"><i class="fa fa-search"></i></a> 
+			  <a href="#"><i class="fa fa-envelope"></i></a> 
+			  <a href="#"><i class="fa fa-globe"></i></a>
+              <a href="#"><i class="fa fa-trash"></i></a> 
+            </div>
+<!--
             <nav id="nav">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -27,6 +41,7 @@
             <footer id="foot">
                 
             </footer>
+-->
         </div>
     </body>
 </html>s
