did makeup stuff and also added products

--- a/Mobile App/gift.html
+++ b/Mobile App/gift.html
@@ -18,16 +18,22 @@
                 <h1>Spiffint</h1>
             </header>
             <div id="content">
-                <h3>New Products</h3>
-                <img src="" alt="product#1" id="product">
-                <p>asdas</p>
+                <h3>Products</h3>
+                <div id="product_grp">
+                    <figure class="product">
+                        <img src="" alt="product#1">
+                        <figcaption>Product name<br>$1,000,000</figcaption>
+                    </figure>
+                </div>
+                
+                
             </div>
             <!-- Icon nav bar -->
             <div class="icon-bar">
-              <a class="active" href="index.html"><i class="fa fa-home"></i></a> 
+              <a href="index.html"><i class="fa fa-home"></i></a>
 			  <a href="Search.html"><i class="fa fa-search"></i></a> 
 			  <a href="envelope.html"><i class="fa fa-envelope"></i></a> 
-			  <a href="gift.html"><i class="fa fa-gift"></i></a>
+			  <a class="active" href="gift.html"><i class="fa fa-gift"></i></a>
               <a href="Trash.html"><i class="fa fa-trash"></i></a> 
             </div>
 <!--
