Added some content to me website

--- a/Mobile App/gift.html
+++ b/Mobile App/gift.html
@@ -14,15 +14,15 @@
     <body>
         <div id="container">
             <header id="head">
-                <img src="img/Spiffint%20Logo.png" id="Spiffint Logo" alt="App Logo">
+                <img src="img/Spiffint%20Logo.png" id="SpiffintLogo" alt="App Logo">
                 <h1>Spiffint</h1>
             </header>
             <div id="content">
                 <h3>Products</h3>
                 <div id="product_grp">
                     <figure class="product">
-                        <img src="" alt="product#1">
-                        <figcaption>Product name<br>$1,000,000</figcaption>
+                        <img src="img/Adidas%20POD-S3.1%20shoe.webp" alt="product#1">
+                        <figcaption>Adidas POD-S3.1<br>$70</figcaption>
                     </figure>
                 </div>
                 
