--- a/Mobile App/index.html
+++ b/Mobile App/index.html
@@ -14,13 +14,21 @@
     <body>
         <div id="container">
             <header id="head">
-                <img src="img/Spiffint%20Logo.png" id="Spiffint Logo" alt="App Logo">
+                <img src="img/Spiffint%20Logo.png" id="SpiffintLogo" alt="App Logo">
                 <h1>Spiffint</h1>
             </header>
             <div id="content">
-                <h3>New Products</h3>
-                <img src="" alt="product#1" id="product">
-                <p>asdas</p>
+                <h3>Shoe brands that we sell...</h3>
+                
+                <div id="s_company">
+                    <figure class="company">
+                <img src="img/adidas_PNG8.png" alt="adidas" id="product">
+                <img src="img/nike_PNG5.webp" alt="nike" id="product">
+                <img src="img/saucony.png" alt="saucony" id="product">
+                <img src="img/Vans_logo.png" alt="vans" id="product">
+                    </figure>
+                </div>
+                
             </div>
             <!-- Icon nav bar -->
             <div class="icon-bar">
