Finished mobile app for html 5 class

--- a/Mobile App/index.html
+++ b/Mobile App/index.html
@@ -33,10 +33,10 @@
             <!-- Icon nav bar -->
             <div class="icon-bar">
               <a class="active" href="index.html"><i class="fa fa-home"></i></a> 
-			  <a href="Search.html"><i class="fa fa-search"></i></a> 
-			  <a href="envelope.html"><i class="fa fa-envelope"></i></a> 
+			  <a href="info.html"><i class="fa fa-info-circle"></i></a> 
+			  <a href="bookmark.html"><i class="fa fa-bookmark-o"></i></a> 
 			  <a href="gift.html"><i class="fa fa-gift"></i></a>
-              <a href="Trash.html"><i class="fa fa-trash"></i></a> 
+              <a href="contact.html"><i class="fa fa-id-card-o"></i></a> 
             </div>
 <!--
             <nav id="nav">
