--- a/Mobile App/info.html
+++ b/Mobile App/info.html
@@ -18,17 +18,17 @@
                 <h1>Spiffint</h1>
             </header>
             <div id="content">
-                <h3>New Products</h3>
-                <img src="" alt="product#1" id="product">
-                <p>asdas</p>
+                <h3>Information</h3>
+                <p>This web site is all about geting the best price out of new and popular shoes from some of the biggest brands.  This app will have no ads.  Company started in Utah 2019</p>
+                
             </div>
             <!-- Icon nav bar -->
             <div class="icon-bar">
-              <a href="index.html"><i class="fa fa-home"></i></a>  
-			  <a href="Search.html"><i class="fa fa-search"></i></a> 
-			  <a href="envelope.html"><i class="fa fa-envelope"></i></a> 
+              <a href="index.html"><i class="fa fa-home"></i></a>
+              <a class="active" href="info.html"><i class="fa fa-info-circle"></i></a>
+			  <a href="bookmark.html"><i class="fa fa-bookmark-o"></i></a> 
 			  <a href="gift.html"><i class="fa fa-gift"></i></a>
-              <a class="active" href="Trash.html"><i class="fa fa-trash"></i></a> 
+              <a href="contact.html"><i class="fa fa-id-card-o"></i></a> 
             </div>
 <!--
             <nav id="nav">
